--- a/HTMLfile/4thproject2.html
+++ b/HTMLfile/4thproject2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="4thproject2.CSS">
+    <link rel="stylesheet" href="../CSSFile/4thproject2.CSS">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -26,6 +26,7 @@
                     <a href="#" class="btn_link_nav signup">$9.99</a>
                 </div>
             </nav>
+            <div class="flex_hero">
             <div class="hero">
                 <div class="box_text">
                     <h4>Anna petae</h4>
@@ -37,6 +38,9 @@
                     </p> 
                 <h5 id="prici">$7.99</h5>
                 <h6 id="btn_buy"> Buy Now &rArr;</h6>    
+            </div>
+            <div>
+                <img src="../pictures/4K_NtG9a4MAo0ez6pl.jpg" width="150px" height="280px">
             </div>
     </div>  
     </header>  
@@ -55,9 +59,9 @@
                  <h3 id="h3_howto">06</h3>
              </div>
              <div class="img_howto">
-                 <img src="pictures/3D & Glass (23).jpg" width="200px" height="100px"  id="img_how">
-                 <img src="pictures/3D & Glass (23).jpg" width="200px" height="100px" id="img_how">
-                 <img src="pictures/3D & Glass (23).jpg" width="200px" height="100px" id="img_how">
+                 <img src="../pictures/Love-wallpaper-9049073.jpg" width="200px" height="100px"  id="img_how">
+                 <img src="../pictures/Love-wallpaper-9049073.jpg" width="200px" height="100px" id="img_how">
+                 <img src="../pictures/Love-wallpaper-9049073.jpg" width="200px" height="100px" id="img_how">
 
              </div>
             </div>
@@ -156,22 +160,30 @@
     <p>shop on the go and Buy voluptatem alias doloremque nostrum  </p>
       <div class="grid_callto">
         <div class="grid_call_item"> 
-               <!-- <img -->
+               <img src="../pictures/-1019966921-1322526295.jpg" width="75px" height="75px" id="gird_img">
+               <div id="flex_call_text">
                <p>#5438 CODE</p>
                <h3>cheese burger</h3>
                <p id="ten_call">$10.00</p>
+            </div>
         </div>
         <div class="grid_call_item"> 
             <!-- <img -->
+            <img src="../pictures/-1019966921-1322526295.jpg" width="75px" height="75px" id="gird_img">
+            <div id="flex_call_text">
             <p>#5438 CODE</p>
             <h3>cheese burger</h3>
             <p id="ten_call">$10.00</p>
+            </div>
      </div>
      <div class="grid_call_item"> 
         <!-- <img -->
+        <img src="../pictures/-1019966921-1322526295.jpg" width="75px" height="75px" id="gird_img">
+        <div id="flex_call_text">
         <p>#5438 CODE</p>
         <h3>cheese burger</h3>
         <p id="ten_call">$10.00</p>
+        </div>
  </div>
       </div> 
   </section>
@@ -181,7 +193,7 @@
      <div class="grid_testimo">
      <div id="img"> 
          <div>
-         <img src="pictures/2 (72).JPG" width="75px " height="75px" id="test_img"> 
+         <img src="../pictures/-1019966921-1322526295.jpg" width="75px " height="75px" id="test_img"> 
         <h5>St.jude</h5>
         <p>businreassman</p>
     </div>
@@ -192,7 +204,7 @@
      <div class="grid_item">
      <div id="img"> 
 
-         <img src="pictures/2 (72).JPG" width="75px " height="75px" id="test_img">
+         <img src="../pictures/375406716178910065.jpg" width="75px " height="75px" id="test_img">
         <h5>St.jude</h5>
         <p>businreassman</p>
      </div>
@@ -202,7 +214,7 @@
      <div>
      <div id="img"> 
 
-         <img src="pictures/2 (72).JPG" width="75px " height="75px" id="test_img">
+         <img src="../pictures/FB_IMG_1519800581855.jpg" width="75px " height="75px" id="test_img">
       <h5>St.jude</h5>
         <p>businreassman</p>
 
